syntax = "proto3";

message User {
    int32 id = 1;
    string email = 2;
    string username = 3;
    string password = 4;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message RegisterUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message LoginUserRequest {
    User user = 1;
}

message LoginUserResponse {
    string token = 1;
}

message UserResponse {
    User user = 1;
}

service UserService {
    rpc getUserById(GetUserByIdRequest) returns (UserResponse);
    rpc registerUser (RegisterUserRequest) returns (UserResponse);
    rpc loginUser (LoginUserRequest) returns (LoginUserResponse);
}